reportTitle field added to report model
